--- a/index.html
+++ b/index.html
@@ -1,73 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thanos</title>
-    <link rel="stylesheet" href="styles/style3.css">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Thanos</title>
+  <link rel="stylesheet" href="styles/style3.css">
 </head>
 
 <body>
+  <header>
     <div class="jumbotron">
-        <header class="">
-            <h1>Thanos sang mad titan</h1>
-            <p>
-                Thanos adalah penjahat super buku komik yang muncul dalam publikasi Amerika Marvel Comics
-            </p>
+      <h1>Thanos Sang Mad Titan</h1>
+      <p>Thanos adalah penjahat super buku komik yang muncul dalam publikasi Amerika Marvel Comics</p>
     </div>
     <nav>
-        <ul>
-            <li><a href="#tanos senyum">Thanos Senyum</a></li>
-            <li><a href="#tanos kartun">Thanos Kartun</a></li>
-            <li><a href="#tanos tanos">Thanos Thanos</a></li>
-        </ul>
+      <ul>
+        <li><a href="#tanos-senyum">Thanos Senyum</a></li>
+        <li><a href="#tanos-kartun">Thanos Kartun</a></li>
+        <li><a href="#tanos-tanos">Thanos Thanos</a></li>
+      </ul>
     </nav>
-    </header>
+  </header>
 
-    <main>
-        <div id="content">
-            <article id="tanos senyum" class="card">
-                <h2>Thanos Senyum</h2>
-                <img src="image/image/tanos senyum.jpg" alt="tanos senyum" class="featured-image" />
-                <p>
-                    Ini adalah Thanos
-                </p>
-            </article>
+  <main>
+    <div id="content">
+      <article id="tanos-senyum" class="card">
+        <h2>Thanos Senyum</h2>
+        <img src="image/tanos-senyum.jpg" alt="tanos senyum" class="featured-image" />
+        <p>Ini adalah Thanos</p>
+      </article>
 
-            <article id="tanos kartun" class="card">
-                <h2>Thanos kartun</h2>
-                <img src="image/image/tanos kartun.jpg" alt="tanos kartun" class="featured-image" />
-                <p>Selain di layar lebar, thanos juga muncul di kartun. Salah satunya kemunculannya di animasi Avengers
-                    Assemble. Dia menjadi antagonis utama di animasi tersebut</p>
-            </article>
+      <article id="tanos-kartun" class="card">
+        <h2>Thanos Kartun</h2>
+        <img src="image/tanos-kartun.jpg" alt="tanos kartun" class="featured-image" />
+        <p>Selain di layar lebar, Thanos juga muncul di kartun. Salah satunya kemunculannya di animasi Avengers Assemble.</p>
+      </article>
 
-            <article id="tanos tanos" class="card">
-                <h2>Thanos dan thanos</h2>
-                <img src="image/image/tanos tanos.jpg" alt="tanos tanos" class="featured-image" />
-                <p>Ya, digambar ini kalian bisa melihat 2 thanos yang sedang berhadapan. Satunya berasal dari seris
-                    Squid Game
-                    dan yang satunya adalah thanos yang kita kenal</p>
-            </article>
-        </div>
+      <article id="tanos-tanos" class="card">
+        <h2>Thanos dan Thanos</h2>
+        <img src="image/tanos-tanos.jpg" alt="tanos tanos" class="featured-image" />
+        <p>Ya, digambar ini kalian bisa melihat 2 Thanos yang sedang berhadapan...</p>
+      </article>
+    </div>
 
-        <br>
+    <aside>
+      <article class="card">
+        <h2>Salah satu penjahat terkuat</h2>
+        <p>Thanos</p>
+        <figure>
+          <img src="image/tanos-gauntlet.jpg" alt="tanos gauntlet" />
+          <figcaption>Infinity Gauntlet</figcaption>
+        </figure>
+      </article>
+    </aside>
+  </main>
 
-        <aside>
-            <article class="card">
-                <h2>Salah satu penjahat terkuat</h2>
-                <p>Thanos</p>
-                <figure>
-                    <img src="image/image/tanos gauntlet.jpg" alt="tanos tanos" />
-                    <figcaption>Infinity Gauntlet</figcaption>
-                </figure>
-            </article>
-        </aside>
-    </main>
-    <footer>
-        <p>Thanos &#169; 2025, Marvel</p>
-    </footer>
+  <footer>
+    <p>Thanos &#169; 2025, Marvel</p>
+  </footer>
 </body>
 
 </html>
