--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
     <div id="content">
       <article id="tanos-senyum" class="card">
         <h2>Thanos Senyum</h2>
-        <img src="image/tanos-senyum.jpg" alt="tanos senyum" class="featured-image" />
+        <img src="image/image/tanos-senyum.jpg" alt="tanos senyum" class="featured-image" />
         <p>Ini adalah Thanos</p>
       </article>
 
       <article id="tanos-kartun" class="card">
         <h2>Thanos Kartun</h2>
-        <img src="image/tanos-kartun.jpg" alt="tanos kartun" class="featured-image" />
+        <img src="image/image/tanos-kartun.jpg" alt="tanos kartun" class="featured-image" />
         <p>Selain di layar lebar, Thanos juga muncul di kartun. Salah satunya kemunculannya di animasi Avengers Assemble.</p>
       </article>
 
       <article id="tanos-tanos" class="card">
         <h2>Thanos dan Thanos</h2>
-        <img src="image/tanos-tanos.jpg" alt="tanos tanos" class="featured-image" />
+        <img src="image/image/tanos-tanos.jpg" alt="tanos tanos" class="featured-image" />
         <p>Ya, digambar ini kalian bisa melihat 2 Thanos yang sedang berhadapan...</p>
       </article>
     </div>
@@ -49,7 +49,7 @@
         <h2>Salah satu penjahat terkuat</h2>
         <p>Thanos</p>
         <figure>
-          <img src="image/tanos-gauntlet.jpg" alt="tanos gauntlet" />
+          <img src="image/image/tanos-gauntlet.jpg" alt="tanos gauntlet" />
           <figcaption>Infinity Gauntlet</figcaption>
         </figure>
       </article>
@@ -62,3 +62,4 @@
 </body>
 
 </html>
+
